@@ -1,3 +1,6 @@
+Alastair S - Thu Feb 24 2005
+	slider is now relative to screen size; is now grey also
+
 Alastair S - Sun Feb 21 2005
 	calendar mini-ised and uses gridlines
 	uses bitmaps for the numbers
